--- a/index.html
+++ b/index.html
@@ -126,20 +126,7 @@
                                 <p>Basic</p>
                             </div>
                         </article>
-                        <article>
-                            <img src="checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>Python</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>JAVA</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
+                        
 
                     </div>
                 </div>
@@ -150,6 +137,13 @@
                             <img src="checkmark.png" alt="Experience icon" class="icon" />
                             <div>
                                 <h3>python</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>JAVA</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
@@ -170,7 +164,7 @@
                         <article>
                             <img src="checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Git</h3>
+                                <h3>Git and Github</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
