--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
                                 <p>Basic</p>
                             </div>
                         </article>
+                        <article>
+                            <img src="checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>Git and Github</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
                         
 
                     </div>
